# ChangeLog for squashmount

*squashmount-5.0
	Martin Väth <martin at mvath.de>:
	- Use -always-use-fragments by default
	- Introduce DEFAULT_FRAGMENTS to avoid -always-use-fragments
	- Improve printed output of shell commands
	- Fix treatment of redirects
	- Provide example of special mksquash compression option

*squashmount-4.5
*squashmount-4.4
	Martin Väth <martin at mvath.de>:
	- Add sanity check before deleting DIR after first creation of
	  squashfile, see https://github.com/vaeth/squashmount/issues/1

*squashmount-4.3
	Martin Väth <martin at mvath.de>:
	- Add /etc/nosquash to $killpower default. Fix reference to --keep

*squashmount-4.2
	Martin Väth <martin at mvath.de>:
	- Fix severely misleading typo on manpage for File::Temp::newdir

*squashmount-4.1
	Martin Väth <martin at mvath.de>:
	- Support $killpower (/etc/killpower) for fast emergency shutdown

*squashmount-4.0
	Martin Väth <martin at mvath.de>:
	- Introduce --backup, --no-backup, --tempdir, --compresssion
	  for temporarily overriding configuration, e.g. with set/restore
	- Treat BACKUP as appendix if not an absolute path

*squashmount-3.7
	Martin Väth <martin at mvath.de>:
	- Make clearer that etc/squashmount.pl is only an example
	- Fix typo in getpwnam() getgrnam() calls in example configuration

*squashmount-3.6
	Martin Väth <martin at mvath.de>:
	- Introduce CHMOD, CHOWN; default to CHMOD = 0644

*squashmount-3.5
*squashmount-3.4
	Martin Väth <martin at mvath.de>:
	- No locking default for status and print-*
	- zsh completion: Use --no-locking when calling squashmount

*squashmount-3.3
*squashmount-3.2
	Martin Väth <martin at mvath.de>:
	- Improve documentation

*squashmount-3.1
*squashmount-3.0
	Martin Väth <martin at mvath.de>:
	- modprobe modules by default
	- Support flags !, !!, ?, ??, # in @order
	- Support $modprobe_squashfs
	- Set @order to empty string if not needed
	- Use qw(...) in examples where it makes sense
	- standard_mount() and added_hash() can now be called without &
